<resources>
    <string name="app_name">Findest Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="product_image_description">Product Image</string>
    <string name="add_to_cart_btn">Add To Cart</string>
    <string name="tv_error">Something went wrong</string>
    <string name="order_history">Order History</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="home">Home</string>
    <string name="adress">Jalan Melati Indah No. 27, RT 04/RW 02, Kel. Sukamaju, Kec. Lowokwaru, Kota Malang, Jawa Timur 65141</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>